objects/Segment__c.object
<CustomObject>
    <fields>
        <fullName>Account_Universe_Method__c</fullName>
        <inlineHelpText>Help us understand which method to determine the list of accounts in the universe:  By Account Segment for a particular show or Lead Scoring for a specific event.</inlineHelpText>
        <label>Account Universe Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Segment</fullName>
                    <default>true</default>
                    <label>Account Segment</label>
                </value>
                <value>
                    <fullName>Lead Scoring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <formula>Show__r.Brand__c</formula>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Roles__c</fullName>
        <label>Contact Roles To Sync</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Contact_Role</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Event__c.Show__c</field>
                <operation>equals</operation>
                <valueField>$Source.Show__c</valueField>
            </filterItems>
            <infoMessage>Selected event must belong to the specified show.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Segments</relationshipLabel>
        <relationshipName>Segments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Has_No_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>This is a prospect list</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDynamic__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will Salesforce automatically maintain the Account Segment?</description>
        <label>Dynamically Maintained?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSyncWithPardot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync with Pardot List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Objection_Code__c</fullName>
        <label>Objection Code</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Objection_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <label>Opportunity Stage</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>StageName</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pardot_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Pardot List</description>
        <inlineHelpText>Pardot List</inlineHelpText>
        <label>Pardot List</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Pardot_List__c.IsDeleted__c</field>
                <operation>equals</operation>
                <value>0</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Pardot_List__c</referenceTo>
        <relationshipLabel>Segments</relationshipLabel>
        <relationshipName>Segments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <defaultValue>"Booth"</defaultValue>
        <label>Product</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Show</label>
        <referenceTo>Show__c</referenceTo>
        <relationshipName>Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubExpo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Expo</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SubExpo__c.SubShow__c</field>
                <operation>equals</operation>
                <valueField>$Source.SubShow__c</valueField>
            </filterItems>
            <filterItems>
                <field>SubExpo__c.Event__c</field>
                <operation>equals</operation>
                <valueField>$Source.Event__c</valueField>
            </filterItems>
            <infoMessage>Sub Expo must belong to the specified Sub Show</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SubExpo__c</referenceTo>
        <relationshipLabel>Segments</relationshipLabel>
        <relationshipName>Segments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubShow__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SubShow</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SubShow__c.Show__c</field>
                <operation>equals</operation>
                <valueField>$Source.Show__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SubShow__c</referenceTo>
        <relationshipName>Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Winback</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Current Exhibitor</fullName>
                </value>
                <value>
                    <fullName>Current Attendee</fullName>
                </value>
                <value>
                    <fullName>Association</fullName>
                </value>
                <value>
                    <fullName>Persona</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Segment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Show__c</columns>
        <columns>SubShow__c</columns>
        <columns>Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Surf_Expo_September_2020</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event__c</field>
            <operation>equals</operation>
            <value>2020 Surf Expo September</value>
        </filters>
        <label>Surf Expo September 2020</label>
    </listViews>
    <nameField>
        <label>Segment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Segments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CancelledOrLostRequiredWhenObjectionCode</fullName>
        <active>true</active>
        <description>Cannot select an Objection Code, unless an Opportunity Stage of Lost or Cancelled is selected</description>
        <errorConditionFormula>AND(
AND(
   !INCLUDES( Opportunity_Stage__c,'Lost'),!INCLUDES(Opportunity_Stage__c,'Cancelled')),(!ISBLANK( Objection_Code__c )))</errorConditionFormula>
        <errorDisplayField>Objection_Code__c</errorDisplayField>
        <errorMessage>Cannot select an Objection Code unless an Opportunity Stage of Lost or Cancelled is selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EventRequired</fullName>
        <active>true</active>
        <description>Event is required if this is a dynamic segment</description>
        <errorConditionFormula>AND ( (IsDynamic__c = True),ISBLANK(Event__c))</errorConditionFormula>
        <errorDisplayField>Event__c</errorDisplayField>
        <errorMessage>Please select the current event for the show linked to this segment.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OpportunityStageNotRequiredForProspect</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
 Has_No_Opportunity__c = TRUE, NOT(ISBLANK(  Opportunity_Stage__c  )))</errorConditionFormula>
        <errorDisplayField>Opportunity_Stage__c</errorDisplayField>
        <errorMessage>Opportunity Stage is not required for Prospect List.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OpptyStageRequiredFor</fullName>
        <active>true</active>
        <description>If Dynamic Maintained = True AND  ISProspect List = FALSE
Required Fields

•	Opportunity Stage</description>
        <errorConditionFormula>AND(IsDynamic__c == TRUE, Has_No_Opportunity__c ==FALSE,  ISBLANK( Opportunity_Stage__c ))</errorConditionFormula>
        <errorDisplayField>Opportunity_Stage__c</errorDisplayField>
        <errorMessage>Please Enter an Opportunity Stage for Dynamic Lists for non-Prospect Lists</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PardotListRequired</fullName>
        <active>true</active>
        <description>Pardot List Name is required if Sync with Pardot List is checked.</description>
        <errorConditionFormula>AND(IsSyncWithPardot__c  = True, ISBlank(Pardot_List__c ))</errorConditionFormula>
        <errorDisplayField>Pardot_List__c</errorDisplayField>
        <errorMessage>Pardot List is required when Sync with Pardot List is selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SelectAccountUniverse</fullName>
        <active>true</active>
        <description>Select account universe if checkbox is this is prospect list = TRUE</description>
        <errorConditionFormula>AND
(
  Has_No_Opportunity__c==TRUE, 
  AND
     (
       !ISPICKVAL(
         Account_Universe_Method__c, "Lead Scoring")
         
            , 
       !ISPICKVAL(
           Account_Universe_Method__c, "Account Segment")
           )
)</errorConditionFormula>
        <errorDisplayField>Account_Universe_Method__c</errorDisplayField>
        <errorMessage>Account Universe Method is required for Prospect Lists</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SubExpoRequiredForDynamicNonProspects</fullName>
        <active>true</active>
        <description>If Dynamic Maintained = True AND  ISProspect List = FALSE
Required Fields


IF Sub Show IS NOT BLANK
•	SubExpo</description>
        <errorConditionFormula>AND(IsDynamic__c == TRUE, Has_No_Opportunity__c ==FALSE,  !ISBLANK( SubShow__c ), ISBLANK(SubExpo__c))</errorConditionFormula>
        <errorDisplayField>SubExpo__c</errorDisplayField>
        <errorMessage>Please enter a Subexpo to define Opportunity Exclusion for Dynamic, non-Prospect List.</errorMessage>
    </validationRules>
</CustomObject>